--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,29 @@
 {
-  "singleQuote": true,
-  "trailingComma": "all",
-  "tabWidth": 2,
-  "useTabs": false
+    "bracketSpacing": true,
+    "printWidth": 160,
+    "proseWrap": "preserve",
+    "semi": true,
+    "singleQuote": true,
+    "trailingComma": "all",
+    "tabWidth": 4,
+    "parser": "typescript",
+    "arrowParens": "always",
+    "requirePragma": false,
+    "insertPragma": false,
+    "endOfLine": "lf",
+    "overrides": [
+        {
+            "files": "*.json",
+            "options": {
+                "singleQuote": false
+            }
+        },
+        {
+            "files": ".*rc",
+            "options": {
+                "singleQuote": false,
+                "parser": "json"
+            }
+        }
+    ]
 }
